src/scss/_demo.main.scss
//
// DEMO.MAIN
//



////////////////////////////////////////////////////////////////////////////////
//
// REMOVE
//

body,
.c-site,
.c-masthead,
.c-body,
.c-footer,
.o-container,
.c-main,
.c-page-header {
    background: rgba(lightsteelblue, .4);
}

.c-sidebar,
.c-main {
    background: rgba(black, .2);
}

.c-masthead,
.c-entry {
    border-bottom: 3px solid gray;
}

.c-footer {
    border-top: 3px solid gray;
}


////////////////////////////////////////////////////////////////////////////////
//
// OBJECTS.CONTAINER
//

.o-container {
    @include clearfix;
    margin: 0 auto;
    max-width: 1200px;
    padding-left: spacer-x(layout-1);
    padding-right: spacer-x(layout-1);

    @include media-breakpoint-up(lg) {
        padding-left: spacer-x(layout-2);
        padding-right: spacer-x(layout-2);
    }
}

////////////////////////////////////////////////////////////////////////////////
//
// OBJECTS.SECTION
//

.o-section {
    padding-top: spacer-y(layout-1);
    padding-bottom: spacer-y(layout-1);

    @include media-breakpoint-up(lg) {
        padding-top: spacer-y(layout-2);
        padding-bottom: spacer-y(layout-2);
    }
}

////////////////////////////////////////////////////////////////////////////////
//
// COMPONENTS.SITE
//

.c-site {
    max-width: 1200px;
    margin: 0 auto;
}

////////////////////////////////////////////////////////////////////////////////
//
// COMPONENTS.MAIN
//

.c-main {
    height: 100%;
}

////////////////////////////////////////////////////////////////////////////////
//
// COMPONENTS.SIDEBAR
//

.c-sidebar {
    height: 100%;
}

////////////////////////////////////////////////////////////////////////////////
//
// COMPONENTS.ENTRY
//

.c-entry {
    @include clearfix;
}

